force-app/main/default/objects/CRMforNonProfit__Donor_Certificates_Settings__c/CRMforNonProfit__Donor_Certificates_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Donor Certificates Settings</label>
</CustomObject>