force-app/main/default/objects/CRMforNonProfit__Donor_Certificates_Settings__c/fields/CRMforNonProfit__Captcha_Secret__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Captcha_Secret__c</fullName>
    <inlineHelpText>Add secret to Google Recaptcha API</inlineHelpText>
    <label>Captcha Secret</label>
    <length>150</length>
    <type>Text</type>
</CustomField>