force-app/main/default/objects/CRMforNonProfit__Donor_Certificates_Settings__c/fields/CRMforNonProfit__Captcha_Site_Key__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Captcha_Site_Key__c</fullName>
    <inlineHelpText>Please insert site key from google for reCaptcha</inlineHelpText>
    <label>Captcha Site Key</label>
    <length>200</length>
    <type>Text</type>
</CustomField>