force-app/main/default/objects/CRMforNonProfit__Donor_Certificates_Settings__c/fields/CRMforNonProfit__Captcha_Verify_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Captcha_Verify_Endpoint__c</fullName>
    <defaultValue>&apos;https://www.google.com/recaptcha/api/siteverify&apos;</defaultValue>
    <inlineHelpText>A link to Google verify captcha API.</inlineHelpText>
    <label>Captcha Verify Endpoint</label>
    <length>250</length>
    <type>Text</type>
</CustomField>