force-app/main/default/objects/CRMforNonProfit__Donor_Certificates_Settings__c/fields/CRMforNonProfit__Certificate_End_Day__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Certificate_End_Day__c</fullName>
    <defaultValue>&apos;31.12&apos;</defaultValue>
    <inlineHelpText>Enter day of the last transaction in a calendar year (e.g. 13.12 if the certificate should contain transactions to (&lt;=) 12th December. of the selected year, format DD.MM)</inlineHelpText>
    <label>Certificate End Day</label>
    <length>5</length>
    <type>Text</type>
</CustomField>