force-app/main/default/objects/CRMforNonProfit__Donor_Certificates_Settings__c/fields/CRMforNonProfit__Certificate_Start_Day__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Certificate_Start_Day__c</fullName>
    <defaultValue>&apos;1.1&apos;</defaultValue>
    <inlineHelpText>Enter day of first transaction in a calendar year (e.g. 1.1 if the certificate should contain transactions from 1st January. of the selected year, format DD.MM)</inlineHelpText>
    <label>Certificate Start Day</label>
    <length>5</length>
    <type>Text</type>
</CustomField>