force-app/main/default/objects/CRMforNonProfit__Donor_Certificates_Settings__c/fields/CRMforNonProfit__Change_Request_Queue__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Change_Request_Queue__c</fullName>
    <defaultValue>&apos;Data_Change_Request&apos;</defaultValue>
    <inlineHelpText>please insert api name of the queue for cases created from self service function</inlineHelpText>
    <label>Change Request Queue</label>
    <length>50</length>
    <type>Text</type>
</CustomField>