force-app/main/default/objects/CRMforNonProfit__Donor_Certificates_Settings__c/fields/CRMforNonProfit__Daily_Emails_Limit__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Daily_Emails_Limit__c</fullName>
    <inlineHelpText>Maximum emails to be sent per day, max. 5.000</inlineHelpText>
    <label>Daily Emails Limit</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>