force-app/main/default/objects/CRMforNonProfit__Donor_Certificates_Settings__c/fields/CRMforNonProfit__Email_Templates_Folder__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Email_Templates_Folder__c</fullName>
    <defaultValue>&apos;DEMO_DonorCertificates&apos;</defaultValue>
    <label>Email Templates Folder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>