force-app/main/default/objects/CRMforNonProfit__Donor_Certificates_Settings__c/fields/CRMforNonProfit__Manual_Certificate_Send_Queue__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Manual_Certificate_Send_Queue__c</fullName>
    <defaultValue>&apos;Send_Certificate_Manually&apos;</defaultValue>
    <inlineHelpText>please insert api name of the queue for cases created for certificates that cannot be sent, because there is no email on related contact.</inlineHelpText>
    <label>Manual Certificate Send Queue</label>
    <length>50</length>
    <type>Text</type>
</CustomField>