force-app/main/default/objects/CRMforNonProfit__Donor_Certificates_Settings__c/fields/CRMforNonProfit__PDF_Generator_Public_Site__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__PDF_Generator_Public_Site__c</fullName>
    <description>generatePdfFromHtml makes callout to the URL defined in &apos;PDF_Generator_Public_Site&apos; + &apos;/apex/PDFGenerator&apos;</description>
    <inlineHelpText>eg: https://hackaton-armadaspasy.cs19.force.com/SelfServiceCertificates</inlineHelpText>
    <label>PDF Generator Public Site</label>
    <length>255</length>
    <type>Text</type>
</CustomField>