force-app/main/default/objects/CRMforNonProfit__Donor_Certificates_Settings__c/fields/CRMforNonProfit__Store_Pdf_While_Sending_Email__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Store_Pdf_While_Sending_Email__c</fullName>
    <defaultValue>true</defaultValue>
    <description>While sending email with PDF attachment (from contact record or using batch from home page)
true = store PDF as file in Salesforce
false = do not store PDF as file in Salesforce (if contact does not have email =&gt; file saved even in case of false)</description>
    <label>Store PDF</label>
    <type>Checkbox</type>
</CustomField>