force-app/main/default/objects/CRMforNonProfit__Donor_Certificates_Settings__c/fields/CRMforNonProfit__Wide_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Wide_Email_Address__c</fullName>
    <inlineHelpText>Please fill in email address of organization wide email address, that you want to you use to send out emails with certifications.</inlineHelpText>
    <label>Wide Email Address</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>